# nomia_test

./: .gitignore  Dockerfile  Makefile  README.md  app.yaml  app_db.yaml  env example  pyproject.toml
nomia/: settings.py  urls.py
survey/: admin.py  middleware.py  models.py  urls.py  utils.py  views.py
survey/fixtures/: default.json
survey/migrations/: 0001_initial.py  0002_useranswer.py  0003_useranswer_session.py  0004_alter_useranswer_session.py
survey/templates/: base.html  index.html  question.html  result.html  survey.html
